# Run-length-Encoding

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: compress.hpp
src/: compress.cpp
test/: test_compress.cpp
test/text files/: compress_2.txt  compress_3.txt  decompress_1.txt  decompress_3.txt
